<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:gravity="center"
    android:background="@drawable/joey"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/habitNameEditText"
        android:layout_width="196dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="username"
        android:background="@android:color/holo_blue_bright"
        android:hint="@string/habit_name"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/habitDescriptionEditText"
        android:layout_width="291dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/habitNameEditText"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="description"
        android:background="@android:color/holo_blue_bright"
        android:hint="@string/habit_description"
        android:inputType="text"
        android:padding="16dp"
        android:textColor="@android:color/black" />

    <EditText
        android:id="@+id/frequencyEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/habitDescriptionEditText"
        android:layout_marginTop="8dp"
        android:background="@android:color/holo_blue_bright"
        android:autofillHints="frequency"
        android:hint="@string/frequency_e_g_daily"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:inputType="text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@+id/timingEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/frequencyEditText"
        android:layout_marginTop="8dp"
        android:hint="@string/timing_e_g_morning"
        android:background="@android:color/holo_blue_bright"
        android:autofillHints="timing"
        android:padding="16dp"
        android:textColor="@android:color/black"
        android:inputType="text"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp" />

    <EditText
        android:id="@+id/progressEditText"
        android:layout_width="206dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/timingEditText"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="progress"
        android:background="@android:color/holo_blue_bright"
        android:hint="@string/progress"
        android:inputType="number"
        android:padding="16dp"
        android:textColor="@android:color/black" />

    <Button
        android:id="@+id/addButton"
        android:layout_width="133dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/progressEditText"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_red_dark"
        android:padding="12dp"
        android:text="@string/add_habit"
        android:textColor="@color/white" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/addButton"
        android:layout_centerInParent="true"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_red_dark"
        android:padding="12dp"
        android:text="@string/update_progress"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/streakTextView"
        android:layout_below="@id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>

    <TextView
        android:id="@+id/performanceTextView"
        android:layout_below="@id/streakTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_marginTop="16dp"/>

</RelativeLayout>
